fix button font & alignment

--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ header {
         text-transform: uppercase;
         font-weight: 500;
         padding: 0 15px;
+        padding-top: 15px;
 
         text-align: center;
                 }
@@ -163,7 +164,7 @@ body {
         text-decoration: underline; /* Underlining when hovering over a link */
         }
     a:visited { /* visited link */
-        color: #352F2F;
+        color: #352f2f;
         }
     a:active { /* selected link */
         color: #0b0908;
@@ -224,7 +225,10 @@ body {
             color: #ffffff;
             text-transform: capitalize;
             border: 2px solid #061532;
-            
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            text-align: center;
                     }
     .button.prototype:hover {
             background-color: #ECAE0D;
@@ -276,8 +280,8 @@ body {
             }
     #project1 h1 {
             background-color: #061532
-            margin: 0;
-            padding: 0.67em 0;
+            margin:0;
+            padding:0.67em 0;
             }
     footer {
             background-color: #BC8C8F;
@@ -358,6 +362,7 @@ Medium devices (640px and larger)
         [class*="col-"] {
                         float: left;
                         }
+        }
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
@@ -370,7 +375,7 @@ Large devices (1024px or larger)
             max-width: 1200px;
             margin-left: auto;
             margin-right: auto;
-
+                }
         .navtoggle li:not(:last-child) {
             display: inline-block;
                 }
@@ -378,4 +383,3 @@ Large devices (1024px or larger)
             display: none;
                 }
                         }
-                    }
